tests/baselines/reference/computedPropertyNames45_ES6(strict=true).errors.txt
computedPropertyNames45_ES6.ts(1,13): error TS7008: Member 'x' implicitly has an 'any' type.
computedPropertyNames45_ES6.ts(2,14): error TS7008: Member 'x' implicitly has an 'any' type.
computedPropertyNames45_ES6.ts(2,17): error TS7008: Member 'y' implicitly has an 'any' type.
computedPropertyNames45_ES6.ts(10,5): error TS2411: Property '["get1"]' of type 'Foo' is not assignable to 'string' index type 'Foo2'.
computedPropertyNames45_ES6.ts(11,9): error TS2411: Property '["set1"]' of type 'Foo' is not assignable to 'string' index type 'Foo2'.


==== computedPropertyNames45_ES6.ts (5 errors) ====
    class Foo { x }
                ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
    class Foo2 { x; y }
                 ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
                    ~
!!! error TS7008: Member 'y' implicitly has an 'any' type.
    
    class C {
        get ["get1"]() { return new Foo }
    }
    
    class D extends C {
        // No error when the indexer is in a class more derived than the computed property
        [s: string]: Foo2;
        ~~~~~~~~~~~~~~~~~~
!!! error TS2411: Property '["get1"]' of type 'Foo' is not assignable to 'string' index type 'Foo2'.
!!! related TS2728 computedPropertyNames45_ES6.ts:5:9: '["get1"]' is declared here.
        set ["set1"](p: Foo) { }
            ~~~~~~~~
!!! error TS2411: Property '["set1"]' of type 'Foo' is not assignable to 'string' index type 'Foo2'.
    }